--- a/jupyter_notebooks/lma.ipynb
+++ b/jupyter_notebooks/lma.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -84,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
