download historic rates to csv, add code for back test

--- a/jupyter_notebooks/lma.ipynb
+++ b/jupyter_notebooks/lma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -41,32 +41,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'open': '10990.23000000', 'high': '1000000.00000000', 'low': '1.00000000', 'volume': '9.99102425', 'last': '1000000.00000000', 'volume_30day': '61.36461233'}\n"
+      "{'open': '16842.00000000', 'high': '17178.00000000', 'low': '16251.01000000', 'volume': '15195.14522566', 'last': '16751.06000000', 'volume_30day': '937908.85953892'}\n"
      ]
     }
    ],
    "source": [
     "CLIENT_SECRETS = 'client_secrets.json'\n",
     "client_secrets = json.load(open(CLIENT_SECRETS))\n",
-    "api_url = client_secrets[\"sandbox\"][\"api_url\"]\n",
-    "API_KEY = client_secrets[\"sandbox\"][\"api_key\"]\n",
-    "API_SECRET = client_secrets[\"sandbox\"][\"api_secret\"]\n",
-    "API_PASS = client_secrets[\"sandbox\"][\"api_pass\"]\n",
+    "api_url = client_secrets[\"production\"][\"api_url\"]\n",
+    "API_KEY = client_secrets[\"production\"][\"api_key\"]\n",
+    "API_SECRET = client_secrets[\"production\"][\"api_secret\"]\n",
+    "API_PASS = client_secrets[\"production\"][\"api_pass\"]\n",
     "auth = GdaxAuth(API_KEY, API_SECRET, API_PASS)\n",
     "\n",
-    "# Get accounts\n",
-    "r = requests.get(api_url + '/products/BTC-USD/stats', auth=auth)\n",
+    "# Get 24h rates\n",
+    "r = requests.get(api_url + '/products/BTC-USD/stats')\n",
     "\n",
     "#r = requests.post(api_url + 'orders', json=order, auth=auth)\n",
-    "print (r.json())"
+    "print (r.json())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "candles = requests.get(api_url + '/products/BTC-USD/candles')\n",
+    "df = pd.read_json(candles.text)\n",
+    "df.to_csv('historic_rates.csv',header=[ 'time', 'low', 'high', 'open', 'close', 'volume' ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
